zakomentovanie nejakych printov

--- a/chramst3.ipynb
+++ b/chramst3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "ee756c5e",
    "metadata": {},
    "outputs": [
@@ -25,36 +25,46 @@
       "2. miesto: 🟡 Zlty\n",
       "3. miesto: 🟢 Zeleny\n",
       "4. miesto: 🔴 Cerveny\n",
-      "🔵 Modry zahral kartu 1\n",
-      "Karty v odhadzovanom balicku pre 🔵 Modry: [1]\n",
-      "🟡 Zlty zahral kartu 2\n",
-      "Karty v odhadzovanom balicku pre 🟡 Zlty: [2]\n",
-      "🟢 Zeleny zahral kartu 2\n",
-      "Karty v odhadzovanom balicku pre 🟢 Zeleny: [2]\n",
-      "🔴 Cerveny zahral kartu 1\n",
-      "Karty v odhadzovanom balicku pre 🔴 Cerveny: [1]\n",
       "\n",
       "=== VYHODNOTENIE KOLA ===\n",
       "\n",
       "=========================\n",
-      "Karty s duplikátnymi číslami: [(1, '🔵 Modry'), (2, '🟡 Zlty'), (2, '🟢 Zeleny'), (1, '🔴 Cerveny')]\n",
-      "1. miesto: 🔵 Modry zahral kartu 1\n",
-      "2. miesto: 🔴 Cerveny zahral kartu 1\n",
-      "3. miesto: 🟡 Zlty zahral kartu 2\n",
-      "4. miesto: 🟢 Zeleny zahral kartu 2\n",
-      "🦈\n",
-      "❌❌❌ 🟢 Zeleny prisiel o zivot! zostava 3 zivoty/zivot.❌❌❌\n",
-      "🟢 Zeleny ide na prve miesto, ostatni sa posuvaju.\n",
-      "\n",
-      "==========\n",
+      "Karty s duplikátnymi číslami: [(1, '🔵 Modry'), (1, '🟡 Zlty')]\n",
+      "1. miesto: 🔴 Cerveny zahral kartu 3\n",
+      "2. miesto: 🟢 Zeleny zahral kartu 2\n",
+      "3. miesto: 🔵 Modry zahral kartu 1\n",
+      "4. miesto: 🟡 Zlty zahral kartu 1\n",
+      "🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈\n",
+      "❌❌❌ 🟡 Zlty prisiel o zivot! zostava 3 zivoty/zivot.❌❌❌\n",
+      "🟡 Zlty ide na prve miesto, ostatni sa posuvaju.\n",
       "\n",
       "=== NOVE KOLO ===\n",
       "V tomto kole hraju: 🔵 Modry, 🟡 Zlty, 🟢 Zeleny, 🔴 Cerveny\n",
       "Poradie na zaciatku kola\n",
-      "1. miesto: 🟢 Zeleny\n",
-      "2. miesto: 🔵 Modry\n",
-      "3. miesto: 🔴 Cerveny\n",
-      "4. miesto: 🟡 Zlty\n"
+      "1. miesto: 🟡 Zlty\n",
+      "2. miesto: 🔴 Cerveny\n",
+      "3. miesto: 🟢 Zeleny\n",
+      "4. miesto: 🔵 Modry\n",
+      "\n",
+      "=== VYHODNOTENIE KOLA ===\n",
+      "\n",
+      "=========================\n",
+      "Karty s duplikátnymi číslami: []\n",
+      "1. miesto: 🟢 Zeleny zahral kartu 6\n",
+      "2. miesto: 🟡 Zlty zahral kartu 5\n",
+      "3. miesto: 🔵 Modry zahral kartu 2\n",
+      "4. miesto: 🔴 Cerveny zahral kartu 1\n",
+      "🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈\n",
+      "❌❌❌ 🔴 Cerveny prisiel o zivot! zostava 3 zivoty/zivot.❌❌❌\n",
+      "🔴 Cerveny ide na prve miesto, ostatni sa posuvaju.\n",
+      "\n",
+      "=== NOVE KOLO ===\n",
+      "V tomto kole hraju: 🔵 Modry, 🟡 Zlty, 🟢 Zeleny, 🔴 Cerveny\n",
+      "Poradie na zaciatku kola\n",
+      "1. miesto: 🔴 Cerveny\n",
+      "2. miesto: 🟢 Zeleny\n",
+      "3. miesto: 🟡 Zlty\n",
+      "4. miesto: 🔵 Modry\n"
      ]
     },
     {
@@ -64,10 +74,10 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[24], line 287\u001b[0m\n\u001b[0;32m    285\u001b[0m \u001b[38;5;66;03m# Vytvorenie instance hry a zahranie karty\u001b[39;00m\n\u001b[0;32m    286\u001b[0m hra \u001b[38;5;241m=\u001b[39m Chramst()\n\u001b[1;32m--> 287\u001b[0m \u001b[43mhra\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mplay\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[24], line 265\u001b[0m, in \u001b[0;36mChramst.play\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    262\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhra konci ak zostanu dvaja hraci, vyhrava ten co je na prvom mieste\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    264\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39maktivni_hraci()) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m2\u001b[39m:  \u001b[38;5;66;03m# hraj pokial mame viac ako dvoch hracov\u001b[39;00m\n\u001b[1;32m--> 265\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhraj_kolo\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    267\u001b[0m vitaz \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39maktivni_hraci()[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m]  \u001b[38;5;66;03m# Prvý hrac vyhrava z dvoch\u001b[39;00m\n\u001b[0;32m    268\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m🎉 HRA SKONCILA! VITAZ JE: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvitaz\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m! 🎉\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[24], line 238\u001b[0m, in \u001b[0;36mChramst.hraj_kolo\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    236\u001b[0m \u001b[38;5;66;03m# 3. kazdy aktivny hrac zahra kartu (for loop + zahraj_kartu)\u001b[39;00m\n\u001b[0;32m    237\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m hraci \u001b[38;5;129;01min\u001b[39;00m aktivni:\n\u001b[1;32m--> 238\u001b[0m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mzahraj_kartu\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhraci\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    241\u001b[0m \u001b[38;5;66;03m# 4. Vyhodnoť kolo\u001b[39;00m\n\u001b[0;32m    242\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvyhodnot_kolo()\n",
-      "Cell \u001b[1;32mIn[24], line 29\u001b[0m, in \u001b[0;36mChramst.zahraj_kartu\u001b[1;34m(self, meno_hraca)\u001b[0m\n\u001b[0;32m     26\u001b[0m karty_hraca \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhraci[meno_hraca][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mkarty na ruke\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m     28\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m: \u001b[38;5;66;03m#ked som to tu nemala, ak zadal hrac zlu kartu, tak isiel iny hrac nasledne na to\u001b[39;00m\n\u001b[1;32m---> 29\u001b[0m     vyber_kartu \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mmeno_hraca\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m, vyber si kartu co chces zahrat \u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mkarty_hraca\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m: \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     34\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m vyber_kartu \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m karty_hraca:\n\u001b[0;32m     35\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCislo \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvyber_kartu\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m nie je spravne. Vyber si jednu z kariet co mas na ruke\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[26], line 287\u001b[0m\n\u001b[0;32m    285\u001b[0m \u001b[38;5;66;03m# Vytvorenie instance hry a zahranie karty\u001b[39;00m\n\u001b[0;32m    286\u001b[0m hra \u001b[38;5;241m=\u001b[39m Chramst()\n\u001b[1;32m--> 287\u001b[0m \u001b[43mhra\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mplay\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[26], line 265\u001b[0m, in \u001b[0;36mChramst.play\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    262\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhra konci ak zostanu dvaja hraci, vyhrava ten co je na prvom mieste\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    264\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39maktivni_hraci()) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m2\u001b[39m:  \u001b[38;5;66;03m# hraj pokial mame viac ako dvoch hracov\u001b[39;00m\n\u001b[1;32m--> 265\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhraj_kolo\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    267\u001b[0m vitaz \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39maktivni_hraci()[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m]  \u001b[38;5;66;03m# Prvý hrac vyhrava z dvoch\u001b[39;00m\n\u001b[0;32m    268\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m🎉 HRA SKONCILA! VITAZ JE: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvitaz\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m! 🎉\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[26], line 238\u001b[0m, in \u001b[0;36mChramst.hraj_kolo\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    236\u001b[0m \u001b[38;5;66;03m# 3. kazdy aktivny hrac zahra kartu (for loop + zahraj_kartu)\u001b[39;00m\n\u001b[0;32m    237\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m hraci \u001b[38;5;129;01min\u001b[39;00m aktivni:\n\u001b[1;32m--> 238\u001b[0m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mzahraj_kartu\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhraci\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    241\u001b[0m \u001b[38;5;66;03m# 4. Vyhodnoť kolo\u001b[39;00m\n\u001b[0;32m    242\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvyhodnot_kolo()\n",
+      "Cell \u001b[1;32mIn[26], line 29\u001b[0m, in \u001b[0;36mChramst.zahraj_kartu\u001b[1;34m(self, meno_hraca)\u001b[0m\n\u001b[0;32m     26\u001b[0m karty_hraca \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhraci[meno_hraca][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mkarty na ruke\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m     28\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m: \u001b[38;5;66;03m#ked som to tu nemala, ak zadal hrac zlu kartu, tak isiel iny hrac nasledne na to\u001b[39;00m\n\u001b[1;32m---> 29\u001b[0m     vyber_kartu \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mmeno_hraca\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m, vyber si kartu co chces zahrat \u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mkarty_hraca\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m: \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     34\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m vyber_kartu \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m karty_hraca:\n\u001b[0;32m     35\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCislo \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvyber_kartu\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m nie je spravne. Vyber si jednu z kariet co mas na ruke\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
       "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
      ]
     }
@@ -109,14 +119,14 @@
     "            if vyber_kartu not in karty_hraca:\n",
     "                print(f\"Cislo {vyber_kartu} nie je spravne. Vyber si jednu z kariet co mas na ruke\")\n",
     "            else:\n",
-    "                print(f\"{meno_hraca} zahral kartu {vyber_kartu}\")\n",
+    "                #print(f\"{meno_hraca} zahral kartu {vyber_kartu}\") #tiez to tu uz nepotrebujem, \n",
     "                # Odstráň kartu konkrétnemu hráčovi\n",
     "                self.hraci[meno_hraca][\"karty na ruke\"].remove(vyber_kartu)\n",
     "                self.hraci[meno_hraca][\"odhadzovaci balicek\"].append(vyber_kartu)\n",
     "                self.karty_zahrane_v_kole.append((vyber_kartu, meno_hraca)) # potrebne na vyhodnocovanie neskor,a tak aby vedel python precitat ci nebola jedna karta zahrana viac krat a ktorymi hracmi\n",
     "                #print(f\"karty zahrane za kolo: {self.karty_zahrane_v_kole}\") # netreba printit, bolo len na testovanie\n",
     "                #print(f\"Karty v odhadzovanom balicku pre {meno}: {info['odhadzovaci balicek']}: {self.odhadzovaci_balicek}\")\n",
-    "                print(f\"Karty v odhadzovanom balicku pre {meno_hraca}: {self.hraci[meno_hraca]['odhadzovaci balicek']}\")\n",
+    "                #print(f\"Karty v odhadzovanom balicku pre {meno_hraca}: {self.hraci[meno_hraca]['odhadzovaci balicek']}\") # nepotrebujem uz asi ani\n",
     "                break # fuu, toto tu treba :D inak sa to nikdy neskonci\n",
     "    \n",
     "        \n",
@@ -185,7 +195,7 @@
     "            self.hraci[meno_hraca][\"poradie\"] = poradie_duplikatov #musi tu byt takto, aby potom priradilo aj poradia do self.hraci\n",
     "            poradie_duplikatov += 1 \n",
     "            \n",
-    "        print(\"🦈\")         \n",
+    "        print(\"🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈🦈\")         \n",
     "\n",
     "                \n",
     "        \n",
