finalny final najfinalnejsi

--- a/chramst2.ipynb
+++ b/chramst2.ipynb
@@ -908,6 +908,352 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcf19aab",
+   "metadata": {},
+   "source": [
+    "dalsie printy dat prec nech to vyzera lepsie :D "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65dc4947",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "class Chramst:\n",
+    "    def __init__(self):\n",
+    "        \n",
+    "        self.hraci = {\n",
+    "            \"🔵 Modry\": {\"poradie\": 1, \"zivoty\": 4, \"karty na ruke\": [1, 2, 3, 4, 5, 6], \"odhadzovaci balicek\": []},\n",
+    "            \"🟡 Zlty\": {\"poradie\": 2, \"zivoty\": 4, \"karty na ruke\": [1, 2, 3, 4, 5, 6], \"odhadzovaci balicek\": []},\n",
+    "            \"🟢 Zeleny\": {\"poradie\": 3, \"zivoty\": 4, \"karty na ruke\": [1, 2, 3, 4, 5, 6], \"odhadzovaci balicek\": []},\n",
+    "            \"🔴 Cerveny\": {\"poradie\": 4, \"zivoty\": 4, \"karty na ruke\": [1, 2, 3, 4, 5, 6], \"odhadzovaci balicek\": []}\n",
+    "        }\n",
+    "        \n",
+    "        self.karty_zahrane_v_kole = []\n",
+    "        self.hra_bezi = True\n",
+    "        \n",
+    "    def zobraz_hracov(self):\n",
+    "        for meno, info in self.hraci.items():\n",
+    "            print(f\"{meno}: {info['poradie']}. miesto, Zivoty: {info['zivoty']}. karty na ruke: {info['karty na ruke']}. karty v odhadzovacom balicku: {info['odhadzovaci balicek']} \")\n",
+    "         \n",
+    "     \n",
+    "        \n",
+    "    def zahraj_kartu(self, meno_hraca):\n",
+    "        # Zisti karty tohto hraca\n",
+    "        karty_hraca = self.hraci[meno_hraca][\"karty na ruke\"]\n",
+    "        \n",
+    "        while True: #ked som to tu nemala, ak zadal hrac zlu kartu, tak isiel iny hrac nasledne na to\n",
+    "            vstup = input(f\"{meno_hraca}, vyber si kartu co chces zahrat {karty_hraca}: ak chces ukoncit hru napis: koniec \")\n",
+    "       \n",
+    "            if vstup.lower() == \"koniec\":\n",
+    "                print(\"Ukoncujem hru...\")\n",
+    "                self.hra_bezi = False  # Nastav flag na False\n",
+    "                return  # vrati sa z funkcie a zastavi hru\n",
+    "                \n",
+    "            #ak nie je osetrene ak da hrac len enter, tak to cele padne\n",
+    "            if vstup == \"\":\n",
+    "                print(\"Nezadal si ziadnu kartu. Skus znova.\")\n",
+    "                continue  # Vráť sa na zaciatok while loopu\n",
+    "        \n",
+    "             # Skontroluj, ci su to len cisla\n",
+    "            if not vstup.isdigit():\n",
+    "                print(\"To nie je cislo. Skus znova.\")\n",
+    "                continue\n",
+    "            \n",
+    "            # ked uz viem ze to je cislo, mozme previest\n",
+    "            vyber_kartu = int(vstup)\n",
+    "        \n",
+    "            if vyber_kartu not in karty_hraca:\n",
+    "                print(f\"Cislo {vyber_kartu} nie je spravne. Vyber si jednu z kariet co mas na ruke\")\n",
+    "            else:\n",
+    "                #print(f\"{meno_hraca} zahral kartu {vyber_kartu}\") #tiez to tu uz nepotrebujem, \n",
+    "                # Odstráň kartu konkrétnemu hráčovi\n",
+    "                self.hraci[meno_hraca][\"karty na ruke\"].remove(vyber_kartu)\n",
+    "                self.hraci[meno_hraca][\"odhadzovaci balicek\"].append(vyber_kartu)\n",
+    "                self.karty_zahrane_v_kole.append((vyber_kartu, meno_hraca)) # potrebne na vyhodnocovanie neskor,a tak aby vedel python precitat ci nebola jedna karta zahrana viac krat a ktorymi hracmi\n",
+    "                #print(f\"karty zahrane za kolo: {self.karty_zahrane_v_kole}\") # netreba printit, bolo len na testovanie\n",
+    "                #print(f\"Karty v odhadzovanom balicku pre {meno}: {info['odhadzovaci balicek']}: {self.odhadzovaci_balicek}\")\n",
+    "                #print(f\"Karty v odhadzovanom balicku pre {meno_hraca}: {self.hraci[meno_hraca]['odhadzovaci balicek']}\") # nepotrebujem uz asi ani\n",
+    "                break # fuu, toto tu treba :D inak sa to nikdy neskonci\n",
+    "    \n",
+    "        \n",
+    "            \n",
+    "        \n",
+    "        \n",
+    "            \n",
+    "    def vyhodnot_kolo(self):\n",
+    "        print(\"\\n=============== VYHODNOTENIE KOLA ===============\")\n",
+    "        print(\"\\n=================================================\")\n",
+    "        \n",
+    "        # ak si hraci vybrali rovnake karty, vyblokovali a,  tak neziskavaju ziaden bod, poradie sa nemeni\n",
+    "        # potom sa vyhodnotia ostatni hraci, zacne sa s tym, ktory dal kartu s najnizsim cislom, jeho poradie sa posuva pred tych, co sa vyblokovali\n",
+    "        # cize hrac s najvysskou nevyblokovanou kartou by mal byt na prvom mieste\n",
+    "        # hrac co skoncil posledny prichadza o jeden zivot\n",
+    "        # nasledne tento posledny hrac ide na prve miesto, a posuva ostatnych o priecku nizssie   \n",
+    "             \n",
+    "        #najdi vyblokovane karty, najdem si co sa mi opakovalo . tym co sa opakovali sa nateraz nebude menit poradie\n",
+    "                # 1.Vytvoríme zoznam všetkých druhých hodnôt (index 0 v každej n-tici)\n",
+    "        cisla = [karta[0] for karta in self.karty_zahrane_v_kole]\n",
+    "                # 2. Použite Counter na zistenie frekvencie čísel\n",
+    "        pocet_cisel = Counter(cisla)\n",
+    "                # 3. Identifikujte tie čísla, ktoré sa duplikujú (majú počet > 1)\n",
+    "        duplikatne_cisla = {cisla for cisla, pocet in pocet_cisel.items() if pocet > 1}\n",
+    "                # 4. Iterujte cez pôvodný zoznam a vyberte karty, ktoré majú duplicitné číslo\n",
+    "        karty_s_duplikatnym_cislom = [karta for karta in self.karty_zahrane_v_kole if karta[0] in duplikatne_cisla]\n",
+    "        #s tymto zapisom to nefungovalo spravne: zoradene_duplikatne_karty = sorted(karty_s_duplikatnym_cislom, key=lambda x: x[0], reverse = False)\n",
+    "        zoradene_duplikatne_karty = sorted(\n",
+    "        karty_s_duplikatnym_cislom, \n",
+    "        key=lambda x: self.hraci[x[1]][\"poradie\"]  # x[1] je meno hráča\n",
+    "    )\n",
+    "        \n",
+    "        neduplikatne_karty = [karta for karta in self.karty_zahrane_v_kole if karta[0] not in duplikatne_cisla]\n",
+    "        #print(f\"Neduplikátne karty: {neduplikatne_karty}\") #testovanie metody, preto print\n",
+    "        \n",
+    "        #print(f\"Duplikátne čísla sú: {duplikatne_cisla}\") #testovanie metody, preto print\n",
+    "        print(f\"Karty s duplikátnymi číslami: {karty_s_duplikatnym_cislom}\")\n",
+    "        \n",
+    "         # KROK 3: Zoraď neduplikátne karty od najvyššej po najnižšiu\n",
+    "        zoradene_karty = sorted(neduplikatne_karty, key=lambda x: x[0], reverse=True)\n",
+    "        \n",
+    "       \n",
+    "        \n",
+    "        #prejdi zoradene karty, pre poradie, zaciname od 1.. zoberie si kartu s najvyssim poctom  bodov\n",
+    "        # cize na indexe nula budeme mat prve miesto. aby sme ale realne printili od jednotky a nie nuly\n",
+    "        # vytvorime poradie s hodnotou jedna, spravime for loop\n",
+    "        #pre kazdu srandu zo zoradenych kariet, (karta, meno hraca) , vyprinti info vetu ako sme natom\n",
+    "        # a nezabudni priradit tymto hracom nove poradie \n",
+    "        \n",
+    "        poradie = 1\n",
+    "        for item in zoradene_karty:\n",
+    "            karta = item[0]\n",
+    "            meno_hraca = item[1]\n",
+    "            print(f\"{poradie}. miesto: {meno_hraca} zahral kartu {karta}\")               \n",
+    "            self.hraci[meno_hraca][\"poradie\"] = poradie         \n",
+    "            poradie += 1\n",
+    "        \n",
+    "         \n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "    #aby som mohla najskor priradit poradie duplikatom, tak musim dat pozor na ich povodne poradie\n",
+    "    #vysortovat od mensieho po vacsie cislo podla poradia\n",
+    "    #priradit za poradie neduplikatov\n",
+    "        poradie_duplikatov = poradie\n",
+    "        for item in zoradene_duplikatne_karty:\n",
+    "            karta = item[0]\n",
+    "            meno_hraca = item[1]\n",
+    "            print(f\"{poradie_duplikatov}. miesto: {meno_hraca} zahral kartu {karta}\")\n",
+    "            self.hraci[meno_hraca][\"poradie\"] = poradie_duplikatov #musi tu byt takto, aby potom priradilo aj poradia do self.hraci\n",
+    "            poradie_duplikatov += 1 \n",
+    "            \n",
+    "        print(\"\\n 🏊‍♂🏊‍♂🏊‍♂🏊‍♂🦈🏊‍♂🏊‍♂🏊‍♂🏊‍♂🦈🏊‍♂🏊‍♂🏊‍♂🏊‍♂🦈🏊‍♂🏊‍♂🏊‍♂🏊‍♂🦈🏊‍♂🏊‍♂🏊‍♂🏊‍♂🦈🏊‍♂🏊‍♂🏊‍♂🏊‍♂🦈🏊‍♂🏊‍♂🏊‍♂🏊‍♂🦈🏊‍♂🏊‍♂🏊‍♂🏊‍♂🦈🏊‍♂🏊‍♂🏊‍♂🏊‍♂🦈🏊‍♂🏊‍♂🏊‍♂🏊‍♂🦈🏊‍♂🏊‍♂🏊‍♂🏊‍♂🦈\")         \n",
+    "\n",
+    "                \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "            \n",
+    "            \n",
+    "                   \n",
+    "    \n",
+    "            \n",
+    "    def uber_zivot(self):\n",
+    "    # zorad hracov podla poradia, od najlepsieho po najhorsieho, x[1] je indexovanie/hodnota kluca -poradie z dictionary\n",
+    "    #meno hraca je nula, poradie 1, musime zoradit podla poradia cize preto x[1]\n",
+    "    #metoda items(), berie dvojice z dictionary\n",
+    "        zoradeni_hraci = sorted(self.hraci.items(), key=lambda x: x[1][\"poradie\"])\n",
+    "        #print(f\" zoradeni hraci: {zoradeni_hraci}\")  #testovaci print, v hre to uz len zavadza :D\n",
+    "        \n",
+    "    \n",
+    "    # Posledny hrac (index -1) straca zivot. Treba indexovat kedze neskor pocas hry hracov bude ubudat\n",
+    "    #-1 = posledny prvok v zozname\n",
+    "    #[0] = prvý prvok z dvojice (meno hraca) / zaujima ma ktory HRAC straca zivot\n",
+    "        meno_posledneho = zoradeni_hraci[-1][0]\n",
+    "        self.hraci[meno_posledneho][\"zivoty\"] -= 1\n",
+    "        print(f\"\\n ❌❌❌ {meno_posledneho} prisiel o zivot! zostava {self.hraci[meno_posledneho]['zivoty']} zivoty/zivot.❌❌❌\")\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        if self.hraci[meno_posledneho][\"zivoty\"] == 0:\n",
+    "            return meno_posledneho  # vrat meno vypadnuteho hraca, ak je teda true, tak sa vrati meno a funkcia okmazite konci. nebude oznamovat ze sa posuva na dalsie miesto\n",
+    "            \n",
+    "        \n",
+    "        return None  # Nikto nevypadol\n",
+    "        \n",
+    "    \n",
+    "    #po odratani zivota ide posledny hrac na prve miesto a posuva ostatnych hracov na              \n",
+    "    def posledny_na_prve(self): \n",
+    "        # Zorad hracov podla aktualneho poradia       \n",
+    "        zoradeni_hraci2 = sorted(self.hraci.items(), key=lambda x: x[1][\"poradie\"])\n",
+    "        \n",
+    "        # Posledny hrac (ten s najhorsim poradim)\n",
+    "        meno_posledneho2 = zoradeni_hraci2[-1][0]\n",
+    "        # Posledny ide na prve miesto (poradie = 1), na tvrdo zadefinovane\n",
+    "        self.hraci[meno_posledneho2][\"poradie\"] = 1\n",
+    "        \n",
+    "        for item in range(len(zoradeni_hraci2) - 1): #posledneho mame uz supnuteho na prve miesto, cize nam zostava zvysok hracov minus jeden\n",
+    "            meno_hraca = zoradeni_hraci2[item][0]\n",
+    "            self.hraci[meno_hraca][\"poradie\"] += 1\n",
+    "            \n",
+    "    \n",
+    "            \n",
+    "        print(f\"\\n {meno_posledneho2} ide na prve miesto, ostatni sa posuvaju.\")\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "    ############################################################################################    \n",
+    "        \n",
+    "    \n",
+    "    def dopln_karty(self):\n",
+    "        # pozri hracov, ak ma niekto na ruke menej ako 3 karty, \n",
+    "        # zober karty z odhadozovacieho balika, a dopln ich do ruky\n",
+    "        \n",
+    "        for meno, info in self.hraci.items():\n",
+    "            karty_na_ruke = info[\"karty na ruke\"]\n",
+    "            odhadzovaci_balik = info[\"odhadzovaci balicek\"]\n",
+    "            \n",
+    "            if len(karty_na_ruke) < 3:\n",
+    "                print(f\"{meno} ma len {len(karty_na_ruke)} karty, doplna si z odhadzovaciho balika\")\n",
+    "                karty_na_ruke.extend(odhadzovaci_balik) #prida z odhadzovacieho balika do kariet na ruke\n",
+    "                odhadzovaci_balik.clear()  # Vyprazdni odhadzovaci balik\n",
+    "            \n",
+    "                #print(f\"{meno} dobera karty a ma plny pocet kariet\") #netreba mi?\n",
+    "                \n",
+    "                \n",
+    "          \n",
+    "                \n",
+    "                 \n",
+    "   ###################################################################################################     \n",
+    "    def aktivni_hraci(self):\n",
+    "     #zoznam mien hracov, co maju aktivne zivoty\n",
+    "        hrajuci_hraci = []  # Zoznam, nie dictionary... mena su dolezite, staci zonam, na tie mena sa potom viazu ostatne vlastnosti\n",
+    "        vypadnuti = []\n",
+    "        for meno, info in self.hraci.items():  # items() da dvojice, \n",
+    "            pocet_zivotov = info[\"zivoty\"]  # Takto ceknem zivoty\n",
+    "        \n",
+    "            if pocet_zivotov > 0:\n",
+    "                hrajuci_hraci.append(meno)  # Pridaj meno do zoznamu\n",
+    "            else:                \n",
+    "                vypadnuti.append(meno)  # Poznač si koho odstrániš\n",
+    "            \n",
+    "        #vyhod vypadnutych von z dictionary\n",
+    "        for meno in vypadnuti:\n",
+    "            del self.hraci[meno] # metoda clear by mi vymazala vsetkych, pouzijeme prikaz vymaz meno z vypadnutych zo slovniku\n",
+    "            print(f\"{meno} vypadol z hry!\")       \n",
+    "                \n",
+    "                \n",
+    "    \n",
+    "        #print(f\"Hrajuci hraci: {hrajuci_hraci}\") #toto tiez vykomentovavam, bude print v play, uvidime co to spravi\n",
+    "       \n",
+    "        return hrajuci_hraci  # return mimo for loopu. ak by to bolo v ramci for loopu, nechecklo by to vsetkych hracov, hned by sa to zastavilo\n",
+    "                              # tym ze je tu return, viem dostat tuto premennu aj von z funkcie. ak by nebol return, funkcia skonci a premenna zanikne\n",
+    "    \n",
+    "    def hraj_kolo(self):\n",
+    "        print(\"\\n=============== NOVE KOLO ===============\")\n",
+    "    ##### PRIEBEH HRY #######\n",
+    "    \n",
+    "    \n",
+    "        self.karty_zahrane_v_kole = []\n",
+    "    # 1. zisti ktori hraci su aktivni, zavolaj funkciu ativini_hraci a uloz adta do premennej aktivni\n",
+    "        aktivni = self.aktivni_hraci() #treba rozbalit oboch, kedze  sme v metode returnovali obe hodnoty\n",
+    "       \n",
+    "        print(f\"V tomto kole hraju: {', '.join(aktivni)}\") #.join mi pekne vyprinti hracov bez zatvoriek\n",
+    "        \n",
+    "    \n",
+    "    # 2. Zoraď ich podľa poradia (použij sorted)\n",
+    "    \n",
+    "        print(\"Poradie na zaciatku kola\")\n",
+    "        hraci_podla_poradia = sorted(self.hraci.items(), key=lambda x: x[1][\"poradie\"])\n",
+    "        for meno, info in hraci_podla_poradia:\n",
+    "            print(f\"{info['poradie']}. miesto: {meno}\")\n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "    # 3. kazdy aktivny hrac zahra kartu (for loop + zahraj_kartu)\n",
+    "        for hraci in aktivni:\n",
+    "            self.zahraj_kartu(hraci)\n",
+    "            if not self.hra_bezi:  # Ak niekto ukoncil hru\n",
+    "                return  # skonci kolo ak niekto ukoncil hru\n",
+    "        \n",
+    "                \n",
+    "    \n",
+    "    # 4. Vyhodnoť kolo\n",
+    "        self.vyhodnot_kolo()\n",
+    "    \n",
+    "    # 5. Uber život\n",
+    "        vypadnuti_hraci = self.uber_zivot()\n",
+    "        if vypadnuti_hraci is None:\n",
+    "            self.posledny_na_prve()  # Posun sa vykona len ak hrac este zije\n",
+    "        else:\n",
+    "            print(f\"🦈 {vypadnuti_hraci} vypadol z hry!\")\n",
+    "            del self.hraci[vypadnuti_hraci]  # Vymaž vypadnutého hráča\n",
+    "    # ŽIADNE posúvanie - poradie zostáva ako je\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    # 7. dopln karty hracom co maju dve a menej kariet\n",
+    "        self.dopln_karty()\n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "    def play(self):\n",
+    "        print(\"Vitaj v hre Chramst!\")\n",
+    "        print(\"pravidla su jednoduche: nenechaj sa zozrat zralokom\")\n",
+    "        print(\"kazde kolo hrac zahra kartu\")\n",
+    "        print(\"karta s najvyssim cislom posuva hraca na prve miesto\")\n",
+    "        print(\"ale pozor, ak hraci zahraju rovnake karty, tak sa z povodneho miesta nehybu a moze ich predbehnut hrac s nizsou kartou\")\n",
+    "        print(\"na konci kola, hrac na poslednom mieste straca zivot - zralok mu odkusne jednu z koncatin,  a posuva sa na prve miesto, zacina sa dalsie kolo\")\n",
+    "        print(\"hra konci ak zostanu dvaja hraci, vyhrava ten co je na prvom mieste\")\n",
+    "        \n",
+    "        while len(self.aktivni_hraci()) > 2 and self.hra_bezi:  # hraj pokial mame viac ako dvoch hracov\n",
+    "            self.hraj_kolo()\n",
+    "            \n",
+    "        if self.hra_bezi:  # len ak sa hra skoncila normalne\n",
+    "            zoradeni = sorted(self.hraci.items(), key=lambda x: x[1][\"poradie\"])\n",
+    "            vitaz = zoradeni[0][0]  # prvy v zoradenom zozname je vitaz\n",
+    "            print(f\"\\n🎉🎉🎉 HRA SKONCILA! VITAZ JE: {vitaz}! 🎉🎉🎉\")\n",
+    "        else:\n",
+    "            print(\"\\n👋 Hra bola ukoncena hracom.\")\n",
+    "    \n",
+    "        \n",
+    "               \n",
+    "\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "            \n",
+    "       \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "\n",
+    "\n",
+    "# Vytvorenie instance hry a zahranie karty\n",
+    "hra = Chramst()\n",
+    "hra.play()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
